# PaperRun

./: pyproject.toml
Examples/: get_ticker_data.py
PaperRun/: __init__.py  simulation.py
